# cosmographer

./: .config.yml.swp  .gitignore  CMakeLists.txt  config.yml  cosmographer.sh  cosmographer.yml  keyhole_config.yml  palantir_config.yml
src/: Bootstrapper.cpp  Bootstrapper.h  Config.cpp  Config.h  Constants.h  Cosmographer.cpp  Cosmographer.h  CosmographerCommunity.h  Empyrium.cpp  Empyrium.h  Paradigm.cpp  Paradigm.h  default.h  main.cpp
src/cloister/: AxiomRefresher.cpp  AxiomRefresher.h  Cartographer.cpp  Cartographer.h  Cloister.h  CloisterCommunity.h  ColorPixie.cpp  ColorPixie.h  Constants.h  LumionBookie.cpp  LumionBookie.h  Pole.cpp  Pole.h  Randomizer.cpp  Randomizer.h  Signalarium.cpp  Signalarium.h  VolitiaGolem.cpp  VolitiaGolem.h  VolitiaParadigmBond.cpp  VolitiaParadigmBond.h
src/cloister/chromatica/: Chromatica.cpp  Chromatica.h  ChromaticaCommunity.h  Palettes.h
src/cloister/chromatica/palette/: BeatPalette.cpp  BeatPalette.h  CentrifugalPalette.cpp  CentrifugalPalette.h  ExplorerPalette.cpp  ExplorerPalette.h  Palette.h  RandomPalette.cpp  RandomPalette.h  SingleColorPalette.h
src/cloister/chromatica/pixie/: ColorPixie.cpp  ColorPixie.h
src/cosmology/: Aspect.h  Cosmology.cpp  Cosmology.h  CosmologyCommunity.h  Lattice.cpp  Lattice.h
src/cosmology/affinity/: Affinity.h  OverlapAffinity.cpp  OverlapAffinity.h  PassthroughAffinity.cpp  PassthroughAffinity.h  SlottedAffinity.cpp  SlottedAffinity.h
src/cosmology/aspect/: Aspect.cpp  Aspect.h  AspectCommunity.h  Bursting.cpp  Bursting.h  Dragonarium.cpp  Dragonarium.h  Plumage.cpp  Plumage.h  SeedAspect.cpp  SeedAspect.h  Signalarium.cpp  Signalarium.h
src/cosmology/aspect/glimmering/: Glimmering.cpp  Glimmering.h  GlimmeringCommunity.h  Illuminator.cpp  Illuminator.h  Orchestrator.cpp  Orchestrator.h
src/cosmology/aspect/glimmering/glimmer/: Glimmer.cpp  Glimmer.h  GlimmerCommunity.h  GlimmerMakers.cpp  GlimmerMakers.h  GlimmerSoul.h
src/cosmology/aspect/glimmering/revealery/: CircleRevealery.cpp  CircleRevealery.h  Revealery.h
src/cosmology/aspect/mesh/: Mesh.cpp  Mesh.h  MeshCommunity.h
src/cosmology/aspect/mesh/lumion/: Lumion.cpp  Lumion.h
src/cosmology/aspect/revealery/: BorderRevealery.cpp  BorderRevealery.h  BrushPartyRevealery.cpp  BrushPartyRevealery.h  OrbRevealery.cpp  OrbRevealery.h  PromenadeRevealery.cpp  PromenadeRevealery.h  Revealeries.h  Revealery.h  SpectrumRevealery.cpp  SpectrumRevealery.h  TriangleRevealery.cpp  TriangleRevealery.h  VariationRevealery.cpp  VariationRevealery.h  WorkshopRevealery.cpp  WorkshopRevealery.h
src/cosmology/aspect/revealery/relics/: BorderRevealery.cpp  BorderRevealery.h  WorkshopRevealery.h
src/cosmology/ephemera/: Bloom.cpp  Bloom.h  Burst.cpp  Burst.h  DragonRoar.cpp  DragonRoar.h  Ephemera.cpp  Ephemera.h  EphemeraEcosystem.cpp  EphemeraEcosystem.h  Observer.cpp  Observer.h
src/cosmology/glimmer/: Glimmer.cpp  Glimmer.h
src/cosmology/glimmering/: Glimmering.h  Illuminator.h  Orchestrator.cpp
src/cosmology/glimmering/glimmer/: Glimmer.cpp  Glimmer.h  GlimmerMakers.cpp  GlimmerMakers.h
src/cosmology/glimmering/glimmer/illuminable/: Illuminable.h  Illuminables.h
src/cosmology/glimmering/glimmer/lindogram/: DragonCurve.cpp  DragonCurve.h  Fuzz.cpp  Fuzz.h  Odds.h  Triangle.cpp  Triangle.h  Wander.cpp  Wander.h  WorkshopCurve.cpp  (+1 more)
src/cosmology/illuminable/: Illuminable.cpp  Illuminable.h  RandomScatter.cpp  RandomScatter.h  Signal.cpp  Signal.h
src/cosmology/illuminable/lindogram/: DragonCurve.cpp  DragonCurve.h  Lindogram.cpp  Lindogram.h  LindogramAssembler.cpp  LindogramAssembler.h
src/cosmology/illuminable/shape/: Circle.cpp  Circle.h
src/cosmology/mesh/: Mesh.h
src/cosmology/mesh/lumion/: Lumion.cpp  Lumion.h
src/cosmology/revealery/: Revealeries.h  Revealery.h
src/cosmology/revealery/relics/: BorderRevealery.cpp  BorderRevealery.h  WorkshopRevealery.cpp  WorkshopRevealery.h
src/cosmology/revealeryAspect/glimmering/: Glimmering.h  Illuminator.cpp  Illuminator.h  Orchestrator.cpp
src/cosmology/revealeryAspect/mesh/: Mesh.cpp  Mesh.h
src/cosmology/revealeryAspect/revealery/: Revealeries.h  Revealery.h
src/cosmology/revealeryaspect/: RevealeryAspectCommunity.h
src/cosmology/revealeryaspect/glimmering/: Glimmering.cpp  Glimmering.h  Illuminator.h  Orchestrator.cpp
src/cosmology/revealeryaspect/mesh/: MeshCommunity.h
src/cosmology/revealeryaspect/revealery/: Revealeries.h  Revealery.h
src/framework/: Bindings.h  Community.h  Config.h  Element.h  Framework.h  Libs.h  Macros.h  Minimal.h  Paradigm.h
src/gizmo/: Coordinate.cpp  Coordinate.h  CoordinateTransformer.cpp  CoordinateTransformer.h  Lattice.cpp  Lattice.h  LatticeArbiter.cpp  LatticeArbiter.h  Point.cpp  Point.h
src/gizmo/color/: Colorology.cpp  Colorology.h  HSLColor.cpp  HSLColor.h  RGBColor.h
src/gizmo/color/colorium/: Colorium.cpp  Colorium.h  JourneyColorium.cpp  JourneyColorium.h
src/gizmo/color/palette/: BeatPalette.cpp  BeatPalette.h  FrequencyOscillationPalette.cpp  FrequencyOscillationPalette.h  FrequencyPalette.cpp  FrequencyPalette.h  Palette.h  RandomPalette.cpp  RandomPalette.h  SingleColorPalette.cpp  SingleColorPalette.h
src/gizmo/paradigm/: Axiomology.cpp  Axiomology.h  Paradigm.cpp  Paradigm.h
src/oddments/: Antechamber.cpp  Oddments.h  SignalAverage.cpp  SignalAverage.h  Tidbit.cpp  Tidbit.h
src/percipient/: AnalogoriumPercipient.cpp  AnalogoriumPercipient.h  VolitiaPercipient.cpp  VolitiaPercipient.h
src/primitive/: Lattice.cpp  Lattice.h  Loci.cpp  Loci.h  Signal.cpp  Signal.h
src/primitive/color/: HSLColor.cpp  HSLColor.h
src/squire/: Antechamber.h  SimpleMovingAverage.cpp  SimpleMovingAverage.h
src/vantage/: LuciferonVantage.cpp  LuciferonVantage.h  PalantirVantage.cpp  PalantirVantage.h  PercipiaVantage.cpp  PercipiaVantage.h  Vantage.cpp  Vantage.h
src/vantage/keyhole/: KeyholeConnection.cpp  KeyholeConnection.h  KeyholeConstants.h  KeyholeVantage.cpp  KeyholeVantage.h
src/vantage/wavelet/: SPIConnection.cpp  SPIConnection.h  WaveletConstants.h  WaveletVantage.cpp  WaveletVantage.h
(+145 files in other folders)
